test_suite/alan-2022-examples/failing/000390_mutation.alan
source Id6 begin / a := 5 end
